# poigen

./: .gitignore  POIDB.py  README.md  defunct_filters.py  filters.py  hardcoded.py  helpers.py  minecraft_data.py  poigen.py  poigen.spec  pyproject.toml  requirements.txt
.github/workflows/: build_app.yml
book_exporter/: fetch_books.py
example-hardcoded_pois/: OVERWORLD.json
nbt/: LICENSE.TXT  README.md  __init__.py
src/poigen/: POIDB.py  __init__.py  filterclass.py  filters.py  helpers.py  main.py  minecraft_data.py  poigen.py
src/poigen/book_exporter/: fetch_books.py
src/poigen/map_exporter/: fetch_maps.py
src/poigen/old&defunct/: defunct_filters.py
