[project]
name = "poigen"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Zottelchen", email = "github@zottelchen.com" }]
dependencies = [
    "nbt>=1.5.1",
    "tabulate>=0.9.0",
    "python-dotenv>=1.0.1",
    "minecraftmap @ git+https://github.com/jason-green-io/minecraftmap.git",
    "shortuuid>=1.0.13",
]
readme = "README.md"
requires-python = ">= 3.8"
classifiers = ["Private :: Do Not Upload"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/poigen"]
entry-points = ["poigen=poigen:main"]
